// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectTheme /> should render correctly 1`] = `
<div>
  <Field
    aria-autocomplete="list"
    aria-controls="SelectTheme-filter-theme-listbox"
    aria-haspopup="true"
    component={[Function]}
    id="SelectTheme-filter-theme"
    label="type-theme"
    name="theme"
    options={
      Array [
        Object {
          "label": "Mon premier thème",
          "value": "theme1",
        },
        Object {
          "label": "Mon second thème",
          "value": "theme2",
        },
      ]
    }
    placeholder="event.searchform.all_projects"
    role="combobox"
  />
</div>
`;

exports[`<SelectTheme /> should render empty list 1`] = `
<div>
  <Field
    aria-autocomplete="list"
    aria-controls="SelectTheme-filter-theme-listbox"
    aria-haspopup="true"
    component={[Function]}
    id="SelectTheme-filter-theme"
    label="type-theme"
    name="theme"
    options={Array []}
    placeholder="event.searchform.all_projects"
    role="combobox"
  />
</div>
`;
